--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
-SITE_NAME_HEADER=Digital Garden
-SITE_MAIN_LANGUAGE=en
+SITE_NAME_HEADER=一朴心的数字花园
+SITE_MAIN_LANGUAGE=zh
 SITE_BASE_URL=https://ipuxin.netlify.app
-SHOW_CREATED_TIMESTAMP=false
+SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
-SHOW_UPDATED_TIMESTAMP=false
+SHOW_UPDATED_TIMESTAMP=true
 NOTE_ICON_DEFAULT=
-NOTE_ICON_TITLE=false
-NOTE_ICON_FILETREE=false
-NOTE_ICON_INTERNAL_LINKS=false
-NOTE_ICON_BACK_LINKS=false
+NOTE_ICON_TITLE=true
+NOTE_ICON_FILETREE=true
+NOTE_ICON_INTERNAL_LINKS=true
+NOTE_ICON_BACK_LINKS=true
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
