--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=一朴心的数字花园
+SITE_NAME_HEADER=一朴心
 SITE_MAIN_LANGUAGE=zh
 SITE_BASE_URL=https://ipuxin.netlify.app
 SHOW_CREATED_TIMESTAMP=true
@@ -12,6 +12,8 @@ NOTE_ICON_BACK_LINKS=true
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/thegixo/YueObsidian/HEAD/theme.css
+BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=true
